# formats

./: .gitignore  .typos.toml  Cargo.toml  Cargo.toml.rej  README.md
base16ct/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
base16ct/benches/: mod.rs
base16ct/src/: display.rs  error.rs  lib.rs  lower.rs  mixed.rs  upper.rs
base16ct/tests/: lib.rs
base32ct/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
base32ct/src/: alphabet.rs  encoding.rs  error.rs  lib.rs
base32ct/tests/: proptests.rs  vectors.rs
base64ct/: CHANGELOG.md  Cargo.toml  README.md
base64ct/benches/: mod.rs
base64ct/src/: alphabet.rs  decoder.rs  encoder.rs  encoding.rs  errors.rs  lib.rs  test_vectors.rs  variant.rs
base64ct/tests/: proptests.proptest-regressions  proptests.rs  standard.rs
cmpv2/: Cargo.toml  README.md
cmpv2/src/: ann.rs  body.rs  certified_key_pair.rs  gen.rs  header.rs  lib.rs  message.rs  oob.rs  parameter.rs  poll.rs  pop.rs  response.rs  rev.rs  status.rs
cmpv2/tests/: cert_req.rs  genm_req.rs  init_req.rs  key_update_req.rs  message.rs  p10cr_req.rs  pollrepcontent.rs  rr_req.rs
cms/: CHANGELOG.md  Cargo.toml  README.md
cms/src/: attr.rs  authenticated_data.rs  authenveloped_data.rs  builder.rs  cert.rs  content_info.rs  digested_data.rs  enveloped_data.rs  kemri.rs  lib.rs  revocation.rs  signed_data.rs  symmetric_key.rs  timestamped_data.rs
cms/tests/: builder.rs  cms_ber.rs  compressed_data.rs  digested_data.rs  encrypted_data.rs  enveloped_data.rs  kemri.rs  signed_data.rs  tests_from_pkcs7_crate.rs
const-oid/: CHANGELOG.md  Cargo.toml  README.md
const-oid/oiddbgen/: Cargo.toml  README.md  fips202.md  fips203.md  fips204.md  fips205.md  krb5-oids.asn  ldap-parameters-3.csv  microsoft.asn  rfc3161.txt  rfc5639.txt  rfc5753.txt  rfc7693.txt  rfc8894.md  rfc9688.txt  tcg-tpm.md
const-oid/src/: arcs.rs  buffer.rs  checked.rs  db.rs  encoder.rs  error.rs  lib.rs  parser.rs  traits.rs
const-oid/tests/: lib.rs  oid.rs  oid_ref.rs  proptests.proptest-regressions  proptests.rs
crmf/: Cargo.toml  README.md
crmf/src/: controls.rs  lib.rs  pop.rs  request.rs
crmf/tests/: controls.rs  request.rs
crypto-serde/: Cargo.toml  README.md
crypto-serde/src/: array.rs  lib.rs  slice.rs
crypto-serde/tests/: bincode.rs  cbor.rs  json.rs  serde-json-core.rs  serde_json.rs  toml.rs
der/: CHANGELOG.md  Cargo.toml  README.md
der/derive/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
der/src/: arrayvec.rs  asn1.rs  berder.rs  byte_slice.rs  byte_vec.rs  bytes.rs  bytes_owned.rs  bytes_ref.rs  bytes_ref2.rs  datetime.rs  debug.rs  decodable.rs  decode.rs  decoder.rs  document.rs  encodable.rs  encode.rs  encode_cached.rs  encode_ref.rs  encoder.rs  encoding_rules.rs  error.rs  header.rs  length.rs  lib.rs  message.rs  ord.rs  reader.rs  referenced.rs  str.rs  str_owned.rs  str_ref.rs  str_slice.rs  string.rs  tag.rs  value.rs  writer.rs
der/tests/: ber.rs  berder.rs  clarify.rs  datetime.proptest-regressions  datetime.rs  derive.rs  derive_heapless.rs  derive_no_alloc.rs  pem.rs  set_of.rs
der_derive/: CHANGELOG.md  Cargo.toml  README.md
der_derive/src/: asn1_type.rs  attributes.rs  bitstring.rs  choice.rs  enumerated.rs  lib.rs  sequence.rs  tag.rs
gss-api/: Cargo.toml  README.md
gss-api/src/: lib.rs  negotiation.rs
gssapi/: Cargo.toml
gssapi/src/: lib.rs  negotiation.rs
mcf/: CHANGELOG.md  Cargo.toml  README.md
mcf/src/: base64.rs  error.rs  fields.rs  lib.rs
mcf/tests/: mcf.rs
ocsp/: Cargo.toml  README.md
ocsp/src/: lib.rs  ocsp.rs
ocsp/tests/: ocsp.rs
pem-rfc7468/: CHANGELOG.md  Cargo.toml  README.md
pem-rfc7468/src/: decoder.rs  encoder.rs  error.rs  grammar.rs  lib.rs
pem-rfc7468/tests/: decode.rs
phc/: CHANGELOG.md  Cargo.toml  README.md
phc/src/: error.rs  ident.rs  lib.rs  output.rs  params.rs  salt.rs  string_buf.rs  value.rs
phc/tests/: encoding.rs  password_hash.rs  test_vectors.rs
pkcs1/: CHANGELOG.md  Cargo.toml  README.md
pkcs1/src/: error.rs  lib.rs  params.rs  pkcs8.rs  private_key.rs  public_key.rs  traits.rs  version.rs
pkcs1/tests/: params.rs  private_key.rs  public_key.rs
pkcs10/: CHANGELOG.md  Cargo.toml  README.md
pkcs10/src/: attribute.rs  certification_request.rs  certification_request_info.rs  document.rs  error.rs  info.rs  lib.rs  name.rs  version.rs
pkcs10/tests/: certreq.rs  csr.rs
pkcs12/: CHANGELOG.md  Cargo.toml  README.md
pkcs12/src/: authenticated_safe.rs  bag_type.rs  builder.rs  cert_bag_content.rs  cert_type.rs  content_info.rs  crl_type.rs  decrypt.rs  decrypt_kdf.rs  digest_info.rs  error.rs  kdf.rs  lib.rs  mac_data.rs  pbe_params.rs  pfx.rs  safe_bag.rs  utils.rs
pkcs12/tests/: builder.rs  cert_tests.rs  cert_tests_decrypt.rs  decrypt_3des.rs  decrypt_rc2.rs  kdf.rs  rc2_cipher.rs
pkcs5/: CHANGELOG.md  Cargo.toml  README.md
pkcs5/src/: error.rs  lib.rs  pbes1.rs  pbes2.rs
pkcs5/tests/: pbes2.rs  pbes2_pbkdf2_decrypt.rs
pkcs7/: CHANGELOG.md  Cargo.toml  README.md
pkcs7/src/: CryptographicMessageSyntax2004.rs  algorithm_identifier_types.rs  builder.rs  certificate_choices.rs  cms_version.rs  content_info.rs  content_type.rs  cryptographic_message_syntax2004.rs  data_content.rs  encapsulated_content_info.rs  encrypted_data_content.rs  enveloped_data_content.rs  lib.rs  revocation_info_choices.rs  signed_data_content.rs  signer_info.rs
pkcs7/tests/: builder.rs  content_tests.rs  cryptographic_message_syntax2004.rs
pkcs8/: CHANGELOG.md  Cargo.toml  README.md
pkcs8/src/: attributes.rs  encrypted_private_key_info.rs  error.rs  lib.rs  private_key_info.rs  traits.rs  version.rs
pkcs8/tests/: encrypted_private_key.rs  private_key.rs  public_key.rs  traits.rs
sec1/: CHANGELOG.md  Cargo.toml  README.md
sec1/src/: error.rs  lib.rs  parameters.rs  pkcs8.rs  (+3 more)
serdect/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
spki/: CHANGELOG.md  Cargo.toml  README.md
ssh-key/: CHANGELOG.md  Cargo.toml  README.md
tls_codec/: CHANGELOG.md  Cargo.toml  README.md  Readme.md
x501/: Cargo.toml  README.md
x509-cert/: CHANGELOG.md  Cargo.toml  README.md
(+589 files in other folders)
