[workspace]
resolver = "2"
members = [
    "base16ct",
    "base32ct",
    "base64ct",
    "cmpv2",
    "cms",
    "const-oid",
    "crmf",
    "der",
    "der/derive",
    "gss-api",
    "pem-rfc7468",
    "pkcs1",
    "pkcs5",
    "pkcs8",
    "pkcs12",
    "sec1",
    "serdect",
    "spki",
    "tai64",
    "tls_codec",
    "tls_codec/derive",
    "x509-tsp",
    "x509-cert",
    "x509-cert/test-support",
    "x509-ocsp"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid cyclic dependencies errors
# If we use other crates from the RustCrypto ecosystem, they may pull redundant
# versions of dependencies.
base16ct          = { path = "./base16ct" }
base32ct          = { path = "./base32ct" }
base64ct          = { path = "./base64ct" }
cmpv2             = { path = "./cmpv2" }
cms               = { path = "./cms" }
const-oid         = { path = "./const-oid" }
crmf              = { path = "./crmf" }
der               = { path = "./der" }
der_derive        = { path = "./der/derive" }
pem-rfc7468       = { path = "./pem-rfc7468" }
pkcs1             = { path = "./pkcs1" }
pkcs5             = { path = "./pkcs5" }
pkcs8             = { path = "./pkcs8" }
pkcs12            = { path = "./pkcs12" }
sec1              = { path = "./sec1" }
serdect           = { path = "./serdect" }
spki              = { path = "./spki" }
tai64             = { path = "./tai64" }
tls_codec         = { path = "./tls_codec" }
tls_codec_derive  = { path = "./tls_codec/derive" }
x509-tsp               = { path = "./x509-tsp" }
x509-cert         = { path = "./x509-cert" }
x509-ocsp         = { path = "./x509-ocsp" }


# Pending a release of 0.14.0-pre.1
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
# Pending a release of 0.11.0-pre.2
whirlpool = { git = "https://github.com/RustCrypto/hashes.git" }
# Pending a release of 0.2.0-pre
cbc = { git = "https://github.com/RustCrypto/block-modes.git" }
# Pending a release of 0.11.0-pre
salsa20  = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
# Pending a release of 0.11.0-pre
aes-gcm = { git = "https://github.com/RustCrypto/AEADs.git" }
aead = { git = "https://github.com/RustCrypto/traits.git" }
ctr = { git = "https://github.com/RustCrypto/block-modes.git" }

# https://github.com/RustCrypto/formats/pull/1055
# https://github.com/RustCrypto/signatures/pull/809
ecdsa = { git = "https://github.com/RustCrypto/signatures" }

# https://github.com/RustCrypto/password-hashes/pull/489
scrypt = { git = "https://github.com/RustCrypto/password-hashes.git" }
