[workspace]
resolver = "2"
members = [
    "base16ct",
    "base32ct",
    #"base64ct",
    "cmpv2",
    "cms",
    "const-oid",
    "crmf",
    "der",
    "der_derive",
    "gss-api",
    "pem-rfc7468",
    "pkcs1",
    "pkcs5",
    "pkcs8",
    #"pkcs12",
    "sec1",
    "serdect",
    "spki",
    "tai64",
    "tls_codec",
    "tls_codec/derive",
    #"x509-tsp",
    "x509-cert",
    "x509-cert/test-support",
    #"x509-ocsp"
]
exclude = [
    "base64ct",
    "pkcs12",
    "x509-tsp",
    "x509-ocsp"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid cyclic dependencies errors
# If we use other crates from the RustCrypto ecosystem, they may pull redundant
# versions of dependencies.
base16ct = { path = "./base16ct" }
base32ct = { path = "./base32ct" }
base64ct = { path = "./base64ct" }
cmpv2 = { path = "./cmpv2" }
cms = { path = "./cms" }
const-oid = { path = "./const-oid" }
crmf = { path = "./crmf" }
der = { path = "./der" }
der_derive = { path = "./der_derive" }
pem-rfc7468 = { path = "./pem-rfc7468" }
pkcs1 = { path = "./pkcs1" }
pkcs5 = { path = "./pkcs5" }
pkcs8 = { path = "./pkcs8" }
#pkcs12 = { path = "./pkcs12" }
sec1 = { path = "./sec1" }
serdect = { path = "./serdect" }
spki = { path = "./spki" }
tai64 = { path = "./tai64" }
tls_codec = { path = "./tls_codec" }
tls_codec_derive = { path = "./tls_codec/derive" }
#x509-tsp = { path = "./x509-tsp" }
x509-cert = { path = "./x509-cert" }
#x509-ocsp = { path = "./x509-ocsp" }


# https://github.com/RustCrypto/signatures/pull/913
# https://github.com/RustCrypto/signatures/pull/923
ecdsa   = { git = "https://github.com/RustCrypto/signatures.git" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures.git" }


# https://github.com/RustCrypto/traits/pull/1777
crypto-common  = { git = "https://github.com/RustCrypto/traits.git" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
signature      = { git = "https://github.com/RustCrypto/traits.git" }
aead           = { git = "https://github.com/RustCrypto/traits.git" }

# https://github.com/RustCrypto/RSA/pull/478
# https://github.com/RustCrypto/RSA/pull/504
rsa = { git = "https://github.com/RustCrypto/RSA.git" }

# https://github.com/RustCrypto/password-hashes/pull/577
# https://github.com/RustCrypto/password-hashes/pull/578
pbkdf2 = { git = "https://github.com/RustCrypto/password-hashes.git" }
scrypt = { git = "https://github.com/RustCrypto/password-hashes.git" }

crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }
crypto-primes = { git = "https://github.com/entropyxyz/crypto-primes.git" }

# https://github.com/RustCrypto/elliptic-curves/pull/1125
# https://github.com/RustCrypto/elliptic-curves/pull/1131
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

cbc = { git = "https://github.com/RustCrypto/block-modes.git" }
ctr = { git = "https://github.com/RustCrypto/block-modes.git" }
aes-gcm = { git = "https://github.com/RustCrypto/AEADs.git" }
salsa20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
