[workspace]
resolver = "2"
members = [
    "base16ct",
    "base32ct",
    "base64ct",
    "cmpv2",
    "cms",
    "const-oid",
    "crmf",
    "der",
    "der_derive",
    "gss-api",
    "mcf",
    "pem-rfc7468",
    "phc",
    "pkcs1",
    "pkcs5",
    "pkcs8",
    "pkcs12",
    "sec1",
    "serdect",
    "spki",
    "tai64",
    "tls_codec",
    "tls_codec/derive",
    "x509-tsp",
    "x509-cert",
    "x509-cert/test-support",
    "x509-ocsp"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid cyclic dependencies errors
# If we use other crates from the RustCrypto ecosystem, they may pull redundant
# versions of dependencies.
base16ct = { path = "./base16ct" }
base32ct = { path = "./base32ct" }
base64ct = { path = "./base64ct" }
cmpv2 = { path = "./cmpv2" }
cms = { path = "./cms" }
const-oid = { path = "./const-oid" }
crmf = { path = "./crmf" }
der = { path = "./der" }
der_derive = { path = "./der_derive" }
pem-rfc7468 = { path = "./pem-rfc7468" }
pkcs1 = { path = "./pkcs1" }
pkcs5 = { path = "./pkcs5" }
pkcs8 = { path = "./pkcs8" }
pkcs12 = { path = "./pkcs12" }
sec1 = { path = "./sec1" }
serdect = { path = "./serdect" }
spki = { path = "./spki" }
tai64 = { path = "./tai64" }
tls_codec = { path = "./tls_codec" }
tls_codec_derive = { path = "./tls_codec/derive" }
x509-tsp = { path = "./x509-tsp" }
x509-cert = { path = "./x509-cert" }
x509-ocsp = { path = "./x509-ocsp" }

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
doc_markdown = "warn"
from_iter_instead_of_collect = "warn"
implicit_saturating_sub = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
needless_range_loop = "allow"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
ref_as_ptr = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
