[package]
name = "base32ct"
version = "0.3.0"
description = """
Pure Rust implementation of Base32 (RFC 4648) which avoids any usages of
data-dependent branches/LUTs and thereby provides portable "best effort"
constant-time operation and embedded-friendly no_std support
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/base32ct"
homepage = "https://github.com/RustCrypto/formats/tree/master/base32ct"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dev-dependencies]
base32 = "0.5"
proptest = { version = "1.6", default-features = false, features = ["std"] }

[features]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
