[package]
name = "base64ct"
version = "1.1.0" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust implementation of Base64 (RFC 4648) which avoids any usages of
data-dependent branches/LUTs and thereby provides portable "best effort"
constant-time operation and embedded-friendly no_std support
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
documentation = "https://docs.rs/base64ct"
repository = "https://github.com/RustCrypto/formats/tree/master/base64ct"
categories = ["cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "base64", "pem", "phc"]
readme = "README.md"

[features]
alloc = []
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
