[package]
name = "cmpv2"
version = "0.3.0-pre"
description = """
Pure Rust implementation of the Certificate Management Protocol (CMP) as
described in RFC 4210
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/cmpv2"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]
readme = "README.md"
edition = "2021"
rust-version = "1.75"

[dependencies]
crmf = "=0.3.0-pre"
der = { version = "=0.8.0-pre.0", features = ["alloc", "derive", "flagset", "oid"] }
spki = { version = "=0.8.0-pre.0" }
x509-cert = { version = "=0.3.0-pre", default-features = false }

[dev-dependencies]
const-oid = { version = "=0.10.0-pre.2", features = ["db"] }
hex-literal = "0.4"

[features]
alloc = ["der/alloc"]
std = ["der/std", "spki/std"]

pem = ["alloc", "der/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
