[package]
name = "cmpv2"
version = "0.3.0-pre.0"
description = """
Pure Rust implementation of the Certificate Management Protocol (CMP) as
described in RFC 4210
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/cmpv2"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
crmf = "=0.3.0-pre.0"
der = { version = "0.8", features = ["alloc", "derive", "flagset", "oid"] }
spki = "0.8.0-rc.4"
x509-cert = { version = "0.3.0-rc.4", default-features = false }

# optional features
digest = { version = "0.11.0-rc.8", optional = true, default-features = false }

[dev-dependencies]
const-oid = { version = "0.10", features = ["db"] }
hex-literal = "1"

[features]
alloc = ["der/alloc"]
std = ["der/std", "spki/std"]

pem = ["alloc", "der/pem"]
digest = ["dep:digest", "x509-cert/digest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
