[package]
name = "crmf"
version = "0.0.0"
description = """
Pure Rust implementation of the Certificate Request Message Format (CRMF) as
described in RFC 4211
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/crmf"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
cms = { version = "=0.0.0", path = "../cms"}
der = { version = "0.7", features = ["alloc", "derive"], path = "../der" }
spki = { version = "0.7", path = "../spki" }
x509-cert = { version = "=0.2.0-pre.0", default-features = false, path = "../x509-cert" }

[dev-dependencies]
const-oid = { version = "0.9" } # TODO: path = "../const-oid"

[features]
alloc = ["der/alloc"]
std = ["der/std", "spki/std"]
pem = ["alloc", "der/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
