[package]
name = "crmf"
version = "0.3.0-pre"
description = """
Pure Rust implementation of the Certificate Request Message Format (CRMF) as
described in RFC 4211
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/crmf"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]
readme = "README.md"
edition = "2021"
rust-version = "1.75"

[dependencies]
cms = "=0.3.0-pre"
der = { version = "=0.8.0-pre.0", features = ["alloc", "derive"] }
spki = "=0.8.0-pre.0"
x509-cert = { version = "=0.3.0-pre", default-features = false }

[dev-dependencies]
const-oid = "=0.10.0-pre.2"

[features]
alloc = ["der/alloc"]
std = ["der/std", "spki/std"]
pem = ["alloc", "der/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
