[package]
name = "crmf"
version = "0.3.0-pre.0"
description = """
Pure Rust implementation of the Certificate Request Message Format (CRMF) as
described in RFC 4211
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/crmf"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
cms = "=0.3.0-pre.2"
der = { version = "0.8", features = ["alloc", "derive"] }
spki = "0.8.0-rc.3"
x509-cert = { version = "0.3.0-rc.4", default-features = false }

[dev-dependencies]
const-oid = "0.10"

[features]
alloc = ["der/alloc"]
std = ["der/std", "spki/std"]
pem = ["alloc", "der/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
