[package]
name = "der"
version = "0.7.0-pre"
description = """
Pure Rust embedded-friendly implementation of the Distinguished Encoding Rules
(DER) for Abstract Syntax Notation One (ASN.1) as described in ITU X.690 with
full support for heapless no_std targets
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/der"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["asn1", "crypto", "itu", "pkcs"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
const-oid = { version = "=0.10.0-pre", optional = true, path = "../const-oid" }
der_derive = { version = "=0.7.0-pre", optional = true, path = "derive" }
flagset = { version = "0.4.3", optional = true }
pem-rfc7468 = { version = "=0.7.0-pre", optional = true, path = "../pem-rfc7468" }
time = { version = "0.3.4", optional = true, default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.3.3"
proptest = "1"

[features]
alloc = []
derive = ["der_derive"]
lax = []
oid = ["const-oid"]
pem = ["alloc", "pem-rfc7468/alloc", "zeroize"]
real = []
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
