[package]
name = "der"
version = "0.7.3"
description = """
Pure Rust embedded-friendly implementation of the Distinguished Encoding Rules
(DER) for Abstract Syntax Notation One (ASN.1) as described in ITU X.690 with
full support for heapless no_std targets
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/der"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["asn1", "crypto", "itu", "pkcs"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
arbitrary = { version = "1.3", features = ["derive"], optional = true }
const-oid = { version = "0.9.2", optional = true } # TODO: path = "../const-oid"
der_derive = { version = "0.7", optional = true, path = "derive" }
flagset = { version = "0.4.3", optional = true }
pem-rfc7468 = { version = "0.7", optional = true, features = ["alloc"], path = "../pem-rfc7468" }
time = { version = "0.3.4", optional = true, default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3.3"
proptest = "1"

[features]
alloc = ["zeroize?/alloc"]
std = ["alloc"]

arbitrary = ["dep:arbitrary", "const-oid?/arbitrary", "std"]
derive = ["dep:der_derive"]
oid = ["dep:const-oid"]
pem = ["dep:pem-rfc7468", "alloc", "zeroize"]
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
