[package]
name = "der"
version = "0.8.0-rc.12"
description = """
Pure Rust embedded-friendly implementation of the Distinguished Encoding Rules
(DER) for Abstract Syntax Notation One (ASN.1) as described in ITU X.690 with
full support for heapless `no_std`/`no_alloc` targets
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/der"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["asn1", "crypto", "no-alloc", "itu", "pkcs"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
arbitrary = { version = "1.4", features = ["derive"], optional = true }
bytes = { version = "1", optional = true, default-features = false }
const-oid = { version = "0.10", optional = true }
der_derive = { version = "0.8", optional = true }
heapless = { version = "0.9", optional = true, default-features = false }
flagset = { version = "0.4.7", optional = true }
pem-rfc7468 = { version = "1", optional = true, features = ["alloc"] }
time = { version = "0.3.4", optional = true, default-features = false }
zeroize = { version = "1.8", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
[target.'cfg(any(unix, windows))'.dev-dependencies]
proptest = "1.10"

[features]
alloc = ["zeroize?/alloc"]
std = ["alloc"]

arbitrary = ["dep:arbitrary", "const-oid?/arbitrary", "std"]
ber = []
bytes = ["dep:bytes", "alloc"]
derive = ["dep:der_derive"]
oid = ["dep:const-oid"]
pem = ["dep:pem-rfc7468", "alloc", "zeroize"]
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
