[package]
name = "gss-api"
version = "0.2.0-pre"
description = """
Pure Rust implementation for Generic Security Service Application Program
Interface (GSS-API)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/gss-api"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "authentication", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "gssapi", "kerberos", "krb5"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
der = { version = "0.8", features = ["oid", "alloc"] }
spki = "0.8.0-rc.4"
x509-cert = { version = "0.3.0-rc.4", default-features = false }

[dev-dependencies]
der = { version = "0.8", features = ["oid", "pem", "alloc"] }
hex-literal = "1"
x509-cert = { version = "0.3.0-rc.4", default-features = false, features = ["pem"] }

[features]
rfc2478 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
