[package]
name = "gss-api"
version = "0.0.0"
description = """
Pure Rust implementation for Generic Security Service Application Program Interface
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/gssapi"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "gssapi", "rfc1509", "rfc2478", "rfc4178", "ms-spng"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"


[dependencies]
der = { version = "0.7", features = ["oid", "alloc"] }
spki = { version = "0.7" }
x509-cert = { version = "0.2", default-features = false }

[dev-dependencies]
der = { version = "0.7", features = ["oid", "pem", "alloc"] }
hex-literal = "0.4"
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }

[features]
rfc2478 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
