[package]
name = "ocsp"
version = "0.0.1"
description = """
Pure Rust implementation of the X.509 Internet Public Key Infrastructure
Online Certificate Status Protocol - OCSP formats as described in RFC 6960
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/x509"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "x.509"]
readme = "README.md"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
der = { version = "0.6.0-pre.1", features = ["oid", "derive", "alloc"], path = "../der" }
x509 = { version = "0.0.1", path = "../x509" }
spki = { version = "=0.6.0-pre.0", path = "../spki" }

[dev-dependencies]
hex-literal = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
